# unicode_names2

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: count.rs
generator/: Cargo.toml
generator/src/: formatting.rs  lib.rs  main.rs  phf.rs  trie.rs  util.rs
src/: generated.rs  generated_alias.rs  generated_phf.rs  iter_str.rs  jamo.rs  lib.rs  phf.rs
unicode_names2_macros/: Cargo.toml
unicode_names2_macros/src/: lib.rs
unicode_names2_macros/tests/: test.rs
