[package]

name = "unicode_names2_generator"
edition = "2018"
version = "0.0.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

[features]
unstable = []

[dependencies]
time = "0.1.10"
log = "0"
getopts = "0.2.21"
rand = "0.8.5"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
