[package]

name = "unicode_names2_generator"
edition = "2018"
rust-version = "1.63.0"
version = "1.0.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
homepage = "https://github.com/progval/unicode_names2"
repository = "https://github.com/progval/unicode_names2"
documentation = "https://docs.rs/unicode_names2/"
license = "MIT/Apache-2.0"
description = """
Generates the perfect-hash function used by `unicode_names2`.
"""

[features]
unstable = []

[dependencies]
time = "0.3"
log = "0"
getopts = "0.2.21"
rand = "0.8.5"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
