[package]

name = "unicode_names2_macros"
version = "0.2.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>",
           "Valentin Lorentz <progval+git@progval.net>"]

homepage = "https://github.com/ProgVal/unicode_names2"
repository = "https://github.com/ProgVal/unicode_names2"
documentation = "https://docs.rs/unicode_names2/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode", "plugin"]
description = "Support macros for `unicode_names2`."

[features]
unstable = []

[dependencies]
regex = "0.1.80"

[dependencies.unicode_names2]
path = ".."
version = "0.2"

[lib]
name = "unicode_names2_macros"
plugin = true
