[package]

name = "unicode_names2_macros"
edition = "2018"
version = "0.6.0"
authors = [
    "Huon Wilson <dbau.pp@gmail.com>",
    "Valentin Lorentz <progval+git@progval.net>"
]

homepage = "https://github.com/progval/unicode_names2"
repository = "https://github.com/progval/unicode_names2"
documentation = "https://docs.rs/unicode_names2/"
license = "MIT or Apache-2.0"
keywords = ["text", "unicode", "macro"]
description = "Support macros for `unicode_names2`."

[features]

unstable = []

[dependencies]
regex = "1.0"
syn = "2.0"

[dependencies.unicode_names2]
path = ".."
version = "0.6.0"

[lib]
name = "unicode_names2_macros"
proc-macro = true
